<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app_features.search.view.SearchFragment">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chips_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/chips_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:weightSum="3">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_category"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/category_text_view"
                android:textAlignment="center" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_country"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/area_text_view"
                android:textAlignment="center" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_ingredient"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/ingredient_text_view"
                android:textAlignment="center" />
        </LinearLayout>
    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/search_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chips_group"
        app:startIconDrawable="@drawable/search">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:visibility="gone"
        android:id="@+id/search_meal_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_text_input_layout">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/search_meal_image_view_meals"
                android:layout_width="80dp"
                android:layout_height="100dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/laod"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/search_meal_text_view_meals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                android:textSize="25dp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/search_meal_image_view_meals"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_text_input_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>